tests/baselines/reference/stringLiteralTypesInImplementationSignatures.errors.txt
==== tests/cases/compiler/stringLiteralTypesInImplementationSignatures.ts (11 errors) ====
    // String literal types are only valid in overload signatures
    
    function foo(x: 'hi') { }
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    var f = function foo(x: 'hi') { }
            ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    var f2 = (x: 'hi', y: 'hi') => { }
             ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    
    class C {
        foo(x: 'hi') { }
        ~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    }
    
    interface I {
        (x: 'hi');
        ~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'hi', y: 'hi');
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    
    var a: {
        (x: 'hi');
        ~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'hi');
        ~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    
    var b = {
        foo(x: 'hi') { },
        ~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
        a: function foo(x: 'hi', y: 'hi') { },
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
        b: (x: 'hi') => { }
           ~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    }
    